# KWDB

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NOTICE.txt  README.en.md  README.md
common/: CMakeLists.txt
common/src/common/: cm_assert.cpp  cm_backtrace.cpp  cm_config.cpp  cm_exception.cpp  cm_fault_injection.cpp  cm_func.cpp  cm_kwdb_context.cpp  cm_module.cpp  cm_task.cpp  cm_trace_plugin.cpp
common/src/error/: er_cfg.cpp  er_error.cpp  er_stack.cpp
common/src/h/: cm_assert.h  cm_backtrace.h  cm_config.h  cm_exception.h  cm_fault_injection.h  cm_func.h  cm_kwdb_context.h  cm_module.h  cm_new.h  cm_task.h  cm_trace_plugin.h  er_api.h  er_cfg.h  er_check.h  er_error.h  er_stack.h  lg_api.h  lg_config.h  lg_impl.h  lg_item.h  lg_severity.h  lg_writer.h  lg_writer_console.h  lg_writer_file.h  lt_cond.h  lt_latch.h  lt_rw_latch.h  mm_kmalloc.h  mm_malloc_cgo.h  sv_agent_state.h  th_kwdb_dynamic_thread_pool.h  th_kwdb_operator_info.h  tr_api.h  tr_impl.h
common/src/include/: default_conf.h  kwdb_compatible.h  kwdb_consts.h  kwdb_type.h
common/src/latch/: lt_cond.cpp  lt_latch.cpp  lt_rwlatch.cpp
common/src/log/: lg_impl.cpp  lg_severity.cpp  lg_writer_console.cpp  lg_writer_file.cpp
common/src/mem/: mm_kmalloc.cpp
common/src/thread/: th_kwdb_dynamic_thread_pool.cpp  th_kwdb_operator_info.cpp
common/src/trace/: tr_impl.cpp
common/util/script/: .gitignore  README.md  df.sh  err_inject.sh  query_kwbase_status.sh  query_status.sh  setup_cert_file.sh  utils.sh
kwdbts2/: CMakeLists.txt
kwdbts2/common/include/: TSLockfreeOrderList.h  bitmap_utils.h  explain_analyse.h  lg_commonv2.h  perf_stat.h  pgcode.h  sys_utils.h  ts_common.h  ts_hash_latch.h
kwdbts2/common/src/: bitmap_utils.cpp  sys_utils.cpp
kwdbts2/engine/: db.cpp  engine.cpp  iterator.cpp  payload.cpp  range.cpp  tag_iterator.cpp  ts_snapshot.cpp
kwdbts2/engine/include/: engine.h  iterator.h  payload.h  settings.h  tag_iterator.h  ts_snapshot.h
kwdbts2/engine/tests/: test_util.h  ts_db_test.cpp  ts_engine_range_volume_test.cpp  ts_engine_snapshot_part_test.cpp  ts_engine_snapshot_test.cpp  ts_engine_test.cpp  ts_engine_wal_perf_test.cpp  ts_engine_wal_test.cpp  ts_iterator_test.cpp  ts_meta_iterator_test.cpp  ts_offset_iterator_test.cpp  ts_payload_test.cpp  ts_snapshot_test.cpp  ts_tag_iterator_test.cpp
kwdbts2/exec/include/: ee_agg_scan_op.h  ee_aggregate_distinct.h  ee_aggregate_flow_spec.h  ee_aggregate_func.h  ee_aggregate_op.h  ee_ast_element_type.h  ee_base_op.h  ee_batch_data_container.h  ee_binary_expr.h  ee_cancel_checker.h  ee_cast_utils.h  ee_check_overflow.h  ee_combined_group_key.h  ee_common.h  ee_completion_hashtable.h  ee_completion_list.h  ee_completion_vector.h  ee_completion_wqueue.h  ee_count_timer.h  ee_cpuinfo.h  ee_crc32.h  ee_data_chunk.h  ee_data_chunk_container.h  ee_data_container.h  ee_decimal.h  ee_disk_data_container.h  ee_distinct_flow_spec.h  ee_distinct_op.h  ee_dml_exec.h  ee_dynamic_hash_index.h  ee_encoding.h  ee_exec_pool.h  ee_executor.h  ee_field.h  ee_field_agg.h  ee_field_common.h  ee_field_compare.h  ee_field_const.h  ee_field_func.h  ee_field_func_math.h  (+58 more)
kwdbts2/exec/src/: ee_agg_scan_op.cpp  ee_aggregate_func.cpp  ee_aggregate_op.cpp  ee_batch_data_container.cpp  ee_cancel_checker.cpp  ee_cast_utils.cpp  ee_check_override.cpp  ee_combined_group_key.cpp  ee_common.cpp  ee_cpuinfo.cpp  ee_crc32.cpp  ee_data_chunk.cpp  ee_data_chunk_container.cpp  ee_data_container.cpp  ee_decimal.cpp  ee_disk_data_container.cpp  ee_distinct_flow_spec.cpp  ee_distinct_op.cpp  ee_dml_exec.cpp  ee_dynamic_hash_index.cpp  ee_encoding.cpp  ee_exec_pool.cpp  ee_executor.cpp  ee_field.cpp  ee_field_agg.cpp  ee_field_common.cpp  ee_field_compare.cpp  ee_field_const.cpp  ee_field_func.cpp  ee_field_func_math.cpp  ee_field_func_string.cpp  ee_field_typecast.cpp  ee_field_window.cpp  ee_flow_param.cpp  ee_fnv.cpp  ee_handler.cpp  ee_hash_table.cpp  ee_hash_tag_row_batch.cpp  ee_hash_tag_scan_op.cpp  ee_io_cache.cpp  (+40 more)
kwdbts2/exec/tests/: ee_agg_scan_op_test.cpp  ee_agg_test.cpp  ee_ast_element_type_test.cpp  ee_binary_expr_test.cpp  ee_completion_hashtable_test.cpp  ee_completion_list_test.cpp  ee_completion_wqueue_test.cpp  ee_count_timer_test.cpp  ee_cpuinfo_test.cpp  ee_crc32_test.cpp  ee_data_chunk_container_test.cpp  ee_data_chunk_test.cpp  ee_decimal_test.cpp  ee_disk_data_container_test.cpp  ee_distinct_op_test.cpp  ee_dml_exec_test.cpp  ee_encoding_test.cpp  ee_executor_test.cpp  ee_field_const_test.cpp  ee_field_func_test.cpp  ee_field_test.cpp  ee_flow_param_test.cpp  ee_fnv_test.cpp  ee_global_test.cpp  ee_hash_agg_op_test.cpp  ee_hash_tag_scan_test.cpp  ee_io_cache_test.cpp  ee_iterator_create_test.h  ee_iterator_data_test.h  ee_kwthd_context_test.cpp  ee_kwthd_test.cpp  ee_lexer_test.cpp  ee_linkedlist_container_test.cpp  ee_mempool_test.cpp  ee_metadata_data_test.h  ee_noop_op_test.cpp  ee_op_dml_exec_test.cpp  ee_op_engine_utils.h  ee_op_operator_utils.h  ee_op_spec_utils.h  (+15 more)
kwdbts2/include/: libkwdbts2.h
kwdbts2/mmap/include/: BigObjectApplication.h  BigObjectConfig.h  BigObjectConst.h  BigObjectError.h  BigObjectExtension.h  BigObjectType.h  BigObjectUtils.h  BigObjectVersion.h  BigTable.h  DataHelper.h  DataModel.h  DataOperation.h  DataType.h  DataValueHandler.h  DateTime.h  EntityMetaManager.h  Makefile  ObjectType.h  RWLock.h  TSObject.h  VarString.h  big_table.h  data_helper.h  data_model.h  data_type.h  data_value_handler.h  date_time_util.h  default.h  entity_block_meta_manager.h  legacy.h  objcntl.h  ts_entity_idx_manager.h  ts_object.h  ts_object_error.h  ts_table_object.h  ts_time_partition.h  var_string.h
kwdbts2/mmap/src/: BigObjectApplication.cpp  BigObjectConfig.cpp  BigObjectError.cpp  BigObjectUtils.cpp  BigTable.cpp  DataHelper.cpp  DataModel.cpp  DataType.cpp  DataValueHandler.cpp  DateTime.cpp  EntityMetaManager.cpp  Makefile  Object.cpp  RWLock.cpp  VarString.cpp  big_table.cpp  boconst.cpp  legacy.cpp  (+11 more)
kwdbts2/roachpb/: .gitignore  ee_pb_plan.proto  me_metadata.proto
kwdbts2/shell/: code_coverage.sh  code_memcheck.sh  run_test.sh
(+5048 files in other folders)
